<resources>
    <string name="app_name">Weather Talkback 2</string>

    <!-- Weather Fragment -->
    <string name="weather_data_not_available">Weather data is not available.</string>
    <string name="please_refresh">Please refresh when you\'re online</string>

    <!-- Weather list item -->
    <string name="updated">Updated: %s</string>
    <string name="current_condition">Current condition:</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="image_condition_desc">Image of a weather condition that day</string>

    <!-- Error/warning messages -->
    <string name="error_msg_no_data">Could not fetch the data. Please refresh later</string>
</resources>
