<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@drawable/weather_item_background"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/current_condition"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintLeft_toRightOf="@id/tv_condition_title"
        app:layout_constraintRight_toRightOf="@id/iv_weather_icon"
        tools:text="Windy" />

    <TextView
        android:id="@+id/tv_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/temperature"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintTop_toBottomOf="@id/tv_condition_title" />

    <TextView
        android:id="@+id/tv_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="@id/tv_temperature_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_condition_value"
        tools:text="1C" />

    <TextView
        android:id="@+id/tv_wind_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/wind_speed"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature_title" />

    <TextView
        android:id="@+id/tv_wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="@id/tv_wind_speed_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_temperature_value"
        tools:text="20mph" />

    <TextView
        android:id="@+id/tv_wind_direction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/wind_direction"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_speed_title" />

    <TextView
        android:id="@+id/tv_wind_direction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="@id/tv_wind_direction_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_wind_speed_value"
        tools:text="North East" />

    <TextView
        android:id="@+id/tv_time_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="@id/tv_wind_direction_title"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_direction_value"
        tools:text="Updated: 1 min ago" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="@dimen/weather_condition_img_size"
        android:layout_height="@dimen/weather_condition_img_size"
        android:contentDescription="@string/image_condition_desc"
        android:src="@drawable/ic_refresh"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
